# hcopy

./: .travis.yml  LICENSE  Nothing.cabal  README.md  hcopy.cabal
src/: Main.hs  MainGTK.hs
