-- For further documentation see http://haskell.org/cabal/users-guide/

name:                Nothing
version:             0.1.0.0
synopsis:            Minimal Haskell Project
-- description:
license:             MIT
license-file:        LICENSE
author:              Andreas Pauley
maintainer:          apauley+github@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Nothing
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  GHC-Options:         -Wall -Werror -O2 -rtsopts -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010