-- For further documentation see http://haskell.org/cabal/users-guide/

name:                hcopy
version:             0.1.0.0
synopsis:            Cross-platform copy utility with some kind of friendly-ish UI.
description:         Cross-platform copy utility with some kind of friendly-ish UI.
license:             BSD3
license-file:        LICENSE
author:              Andreas Pauley
maintainer:          apauley+github@gmail.com
copyright:           2015 Andreas Pauley
category:            File Manager
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hcopy
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.5 && < 5.0
                     , directory
  GHC-Options:         -Wall -rtsopts -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hcopy-gtk
  main-is:             MainGTK.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.5 && < 5.0
                     , gtk2hs-buildtools, gtk, mtl
  GHC-Options:         -Wall -rtsopts -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/apauley/hcopy.git
